# requirement-agent

./: .gitignore  README.md  pyproject.toml
spike/: requirement-agent.ipynb  v2.ipynb  v3.ipynb
spike/.ipynb_checkpoints/: requirement-agent-checkpoint.ipynb  spike-checkpoint.ipynb  v1-checkpoint.ipynb
src/requirement_agent/ai/agents/: requirement_agent.py
src/requirement_agent/ai/agents/generator/: agent.py  tools.py
src/requirement_agent/ai/agents/reflector/: agent.py  few_shot.py  tools.py
src/requirement_agent/ai/agents/requirement_generator/: agent.py  few_shot.py
src/requirement_agent/ai/agents/requirement_reflector/: agent.py  tools.py
src/requirement_agent/ai/graph/: condition.py  requirement_graph.py
src/requirement_agent/ai/llms/: ai_provider.py  model.py
src/requirement_agent/ai/prompt/: system.py
src/requirement_agent/ai/prompts/: evaluate_system.py  generate_system.py  reflect_system.py  system.py
src/requirement_agent/ai/state/: requirement_agent_state.py
src/requirement_agent/ai/tools/: tool.py
src/requirement_agent/shared/log/: LOG.py
src/requirement_agent/shared/utils/: logger.py
tests/graph/: test_requirement_graph.py
