[project]
name = "requirement-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "wenhao",email = "wenhao@126.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "langgraph (>=0.4.0,<0.5.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langchain-core (>=0.3.56,<0.4.0)"
]

[tool.poetry]
packages = [{include = "requirement_agent", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
tox = "^4.25.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
